Test(logging): Refactor aspect tests
- Refactor tests with proper mocks
- Fix UNAVAILABLE status case sensitivity
- Add missing test cases for full coverage
- Update Tests
- Improve test readability