@@ -3,19 +3,25 @@ package com.ecclesiaflow.springsecurity.application.logging.aspect;
 import ch.qos.logback.classic.Level;
 import ch.qos.logback.classic.Logger;
 import ch.qos.logback.classic.spi.ILoggingEvent;
+import ch.qos.logback.classic.spi.ThrowableProxy;
 import ch.qos.logback.core.read.ListAppender;
 import org.aspectj.lang.JoinPoint;
 import org.aspectj.lang.Signature;
 import org.junit.jupiter.api.*;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.slf4j.LoggerFactory;
 
 import java.lang.reflect.Method;
 
-import static org.assertj.core.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 /**
  * Tests unitaires pour GrpcServerLoggingAspect.
+ * Version refactorisée sans boucles inutiles et avec tests paramétrés.
  */
 @DisplayName("GrpcServerLoggingAspect - Tests unitaires")
 class GrpcServerLoggingAspectTest {
@@ -24,15 +30,25 @@ class GrpcServerLoggingAspectTest {
     private Logger logger;
     private GrpcServerLoggingAspect aspect;
 
+    // Mocks réutilisables
+    private JoinPoint joinPoint;
+    private Signature signature;
+
     @BeforeEach
     void setUp() {
         logger = (Logger) LoggerFactory.getLogger(GrpcServerLoggingAspect.class);
         listAppender = new ListAppender<>();
         listAppender.start();
         logger.addAppender(listAppender);
-        logger.setLevel(Level.DEBUG);
-        
+        logger.setLevel(Level.DEBUG); // Capturer tous les niveaux
+
         aspect = new GrpcServerLoggingAspect();
+
+        // Initialiser les mocks
+        joinPoint = mock(JoinPoint.class);
+        signature = mock(Signature.class);
+        when(joinPoint.getSignature()).thenReturn(signature);
+        when(joinPoint.getArgs()).thenReturn(new Object[]{}); // Comportement par défaut
     }
 
     @AfterEach
@@ -41,156 +57,83 @@ class GrpcServerLoggingAspectTest {
     }
 
     // ========================================================================
-    // Tests des Pointcuts
-    // ========================================================================
-
-    @Test
-    @DisplayName("Doit couvrir le pointcut grpcServerStart")
-    void shouldCoverGrpcServerStartPointcut() {
-        // Given / When
-        for (int i = 0; i < 100; i++) {
-            aspect.grpcServerStart();
-        }
-        
-        // Then - Pas d'assertion nécessaire, juste couvrir le code
-        assertThat(true).isTrue();
-    }
-
-    @Test
-    @DisplayName("Doit couvrir le pointcut grpcServerStop")
-    void shouldCoverGrpcServerStopPointcut() {
-        // Given / When
-        for (int i = 0; i < 100; i++) {
-            aspect.grpcServerStop();
-        }
-        
-        // Then - Pas d'assertion nécessaire, juste couvrir le code
-        assertThat(true).isTrue();
-    }
-
-    @Test
-    @DisplayName("Doit couvrir le pointcut grpcServiceCalls")
-    void shouldCoverGrpcServiceCallsPointcut() {
-        // Given / When
-        for (int i = 0; i < 100; i++) {
-            aspect.grpcServiceCalls();
-        }
-        
-        // Then - Pas d'assertion nécessaire, juste couvrir le code
-        assertThat(true).isTrue();
-    }
-
-    // ========================================================================
     // Tests - Server Start/Stop
     // ========================================================================
 
     @Test
-    @DisplayName("Doit logger avant le démarrage du serveur gRPC")
+    @DisplayName("Doit logger (INFO) avant le démarrage du serveur gRPC")
     void shouldLogBeforeServerStart() {
-        // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logBeforeServerStart(joinPoint);
-        }
+        aspect.logBeforeServerStart(joinPoint);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getFormattedMessage)
-                .first()
-                .asString()
-                .contains("GRPC", "Initializing gRPC server");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.INFO);
+        assertThat(log.getFormattedMessage()).contains("GRPC", "Initializing gRPC server");
     }
 
     @Test
-    @DisplayName("Doit logger après le démarrage réussi du serveur")
+    @DisplayName("Doit logger (INFO) après le démarrage réussi du serveur")
     void shouldLogAfterServerStart() {
-        // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logAfterServerStart(joinPoint);
-        }
+        aspect.logAfterServerStart(joinPoint);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getFormattedMessage)
-                .first()
-                .asString()
-                .contains("GRPC", "server started successfully");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.INFO);
+        assertThat(log.getFormattedMessage()).contains("GRPC", "server started successfully");
     }
 
     @Test
-    @DisplayName("Doit logger les erreurs de démarrage du serveur")
+    @DisplayName("Doit logger (ERROR) les erreurs de démarrage du serveur")
     void shouldLogServerStartError() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        
-        Exception[] exceptions = {
-            new RuntimeException("Port already in use"),
-            new IllegalStateException("Server not configured"),
-            new SecurityException("Permission denied")
-        };
+        Exception ex = new RuntimeException("Port already in use");
 
         // When
-        for (Exception ex : exceptions) {
-            for (int i = 0; i < 30; i++) {
-                aspect.logServerStartError(joinPoint, ex);
-            }
-        }
+        aspect.logServerStartError(joinPoint, ex);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.ERROR);
-        
-        assertThat(listAppender.list.get(0).getFormattedMessage())
-                .contains("GRPC", "Failed to start gRPC server");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.ERROR);
+        assertThat(log.getFormattedMessage()).contains("GRPC", "Failed to start gRPC server");
+        // Vérifier que l'exception est bien attachée au log
+        assertThat(log.getThrowableProxy()).isNotNull();
+        assertThat(((ThrowableProxy) log.getThrowableProxy()).getThrowable()).isSameAs(ex);
     }
 
     @Test
-    @DisplayName("Doit logger avant l'arrêt du serveur gRPC")
+    @DisplayName("Doit logger (INFO) avant l'arrêt du serveur gRPC")
     void shouldLogBeforeServerStop() {
-        // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logBeforeServerStop(joinPoint);
-        }
+        aspect.logBeforeServerStop(joinPoint);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getFormattedMessage)
-                .first()
-                .asString()
-                .contains("GRPC", "graceful shutdown");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.INFO);
+        assertThat(log.getFormattedMessage()).contains("GRPC", "graceful shutdown");
     }
 
     @Test
-    @DisplayName("Doit logger après l'arrêt réussi du serveur")
+    @DisplayName("Doit logger (INFO) après l'arrêt réussi du serveur")
     void shouldLogAfterServerStop() {
-        // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logAfterServerStop(joinPoint);
-        }
+        aspect.logAfterServerStop(joinPoint);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getFormattedMessage)
-                .first()
-                .asString()
-                .contains("GRPC", "server stopped successfully");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.INFO);
+        assertThat(log.getFormattedMessage()).contains("GRPC", "server stopped successfully");
     }
 
     // ========================================================================
@@ -198,117 +141,83 @@ class GrpcServerLoggingAspectTest {
     // ========================================================================
 
     @Test
-    @DisplayName("Doit logger avant un appel RPC - generateTemporaryToken")
+    @DisplayName("Doit logger (INFO) avant un appel RPC 'generateTemporaryToken'")
     void shouldLogBeforeRpcCall_GenerateTemporaryToken() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
         when(signature.getName()).thenReturn("generateTemporaryToken");
-        when(joinPoint.getArgs()).thenReturn(new Object[]{});
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logBeforeRpcCall(joinPoint);
-        }
+        aspect.logBeforeRpcCall(joinPoint);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.INFO);
-        
-        assertThat(listAppender.list.get(0).getFormattedMessage())
-                .contains("GRPC-RPC", "Received", "generateTemporaryToken", "Members module");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.INFO);
+        assertThat(log.getFormattedMessage()).contains("GRPC-RPC", "Received", "generateTemporaryToken", "Members module");
     }
 
     @Test
-    @DisplayName("Doit logger avant un appel RPC - validateToken")
+    @DisplayName("Doit logger (DEBUG) avant l'appel pour les méthodes génériques")
+    void shouldLogBeforeRpcCall_GenericMethod() {
+        // Given
+        when(signature.getName()).thenReturn("someMethodWithEmail");
+        when(joinPoint.getArgs()).thenReturn(new Object[]{"ID-123", "johndoe.user@example.com", "other-data"});
+
+        // When
+        aspect.logBeforeRpcCall(joinPoint);
+
+        // Then
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+        
+        assertThat(log.getLevel()).isEqualTo(Level.DEBUG);
+        assertThat(log.getFormattedMessage()).contains("GRPC-RPC", "Received", "someMethodWithEmail");
+    }
+
+    @Test
+    @DisplayName("Doit logger (DEBUG) avant un appel RPC 'validateToken'")
     void shouldLogBeforeRpcCall_ValidateToken() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
         when(signature.getName()).thenReturn("validateToken");
-        when(joinPoint.getArgs()).thenReturn(new Object[]{});
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logBeforeRpcCall(joinPoint);
-        }
+        aspect.logBeforeRpcCall(joinPoint);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.DEBUG);
+        assertThat(listAppender.list).hasSize(1);
+        assertThat(listAppender.list.getFirst().getLevel()).isEqualTo(Level.DEBUG);
     }
 
     @Test
-    @DisplayName("Doit logger avant un appel RPC - autre méthode")
-    void shouldLogBeforeRpcCall_OtherMethod() {
-        // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
-        when(signature.getName()).thenReturn("someOtherMethod");
-        when(joinPoint.getArgs()).thenReturn(new Object[]{});
-
-        // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logBeforeRpcCall(joinPoint);
-        }
-
-        // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.DEBUG);
-    }
-
-    @Test
-    @DisplayName("Doit logger après un appel RPC réussi - generateTemporaryToken")
+    @DisplayName("Doit logger (INFO) après un appel RPC 'generateTemporaryToken' réussi")
     void shouldLogAfterSuccessfulRpcCall_GenerateTemporaryToken() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
         when(signature.getName()).thenReturn("generateTemporaryToken");
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logAfterSuccessfulRpcCall(joinPoint);
-        }
+        aspect.logAfterSuccessfulRpcCall(joinPoint);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.INFO);
-        
-        assertThat(listAppender.list.get(0).getFormattedMessage())
-                .contains("GRPC-RPC", "completed successfully", "generateTemporaryToken");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.INFO);
+        assertThat(log.getFormattedMessage()).contains("GRPC-RPC", "completed successfully", "generateTemporaryToken");
     }
 
     @Test
-    @DisplayName("Doit logger après un appel RPC réussi - autre méthode")
+    @DisplayName("Doit logger (DEBUG) après un appel RPC 'validateToken' réussi")
     void shouldLogAfterSuccessfulRpcCall_OtherMethod() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
         when(signature.getName()).thenReturn("validateToken");
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logAfterSuccessfulRpcCall(joinPoint);
-        }
+        aspect.logAfterSuccessfulRpcCall(joinPoint);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.DEBUG);
+        assertThat(listAppender.list).hasSize(1);
+        assertThat(listAppender.list.getFirst().getLevel()).isEqualTo(Level.DEBUG);
     }
 
     // ========================================================================
@@ -316,134 +225,82 @@ class GrpcServerLoggingAspectTest {
     // ========================================================================
 
     @Test
-    @DisplayName("Doit logger une IllegalArgumentException")
+    @DisplayName("Doit logger (WARN) une IllegalArgumentException")
     void shouldLogRpcCallError_IllegalArgument() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
         when(signature.getName()).thenReturn("generateTemporaryToken");
-        
         Exception illegalArgException = new IllegalArgumentException("Invalid UUID format");
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logRpcCallError(joinPoint, illegalArgException);
-        }
+        aspect.logRpcCallError(joinPoint, illegalArgException);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.WARN);
-        
-        assertThat(listAppender.list.get(0).getFormattedMessage())
-                .contains("GRPC-RPC", "Invalid argument", "generateTemporaryToken");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.WARN);
+        assertThat(log.getFormattedMessage()).contains("GRPC-RPC", "Invalid argument", "generateTemporaryToken");
+        assertThat(log.getThrowableProxy()).isNotNull();
     }
 
     @Test
-    @DisplayName("Doit logger une erreur interne")
+    @DisplayName("Doit logger (ERROR) une erreur interne (RuntimeException)")
     void shouldLogRpcCallError_InternalError() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
         when(signature.getName()).thenReturn("generateTemporaryToken");
-        
         Exception internalException = new RuntimeException("Database connection failed");
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logRpcCallError(joinPoint, internalException);
-        }
+        aspect.logRpcCallError(joinPoint, internalException);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.ERROR);
-        
-        assertThat(listAppender.list.get(0).getFormattedMessage())
-                .contains("GRPC-RPC", "Error in", "generateTemporaryToken");
-    }
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst()
+                ;
 
-    @Test
-    @DisplayName("Doit couvrir toutes les branches avec invocations massives")
-    void shouldCoverAllBranchesWithMassiveInvocations() {
-        // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
-        when(joinPoint.getArgs()).thenReturn(new Object[]{});
-
-        // When - Tester tous les cas de figure massivement
-        String[] methodNames = {"generateTemporaryToken", "validateToken", "otherMethod", "refreshToken"};
-        Exception[] exceptions = {
-            new IllegalArgumentException("Bad argument"),
-            new RuntimeException("Internal server error"),
-            new NullPointerException("Null value"),
-            new IllegalStateException("Invalid state")
-        };
-
-        for (String methodName : methodNames) {
-            when(signature.getName()).thenReturn(methodName);
-            
-            for (int i = 0; i < 100; i++) {
-                // Pointcuts
-                aspect.grpcServerStart();
-                aspect.grpcServerStop();
-                aspect.grpcServiceCalls();
-                
-                // Server lifecycle
-                aspect.logBeforeServerStart(joinPoint);
-                aspect.logAfterServerStart(joinPoint);
-                aspect.logBeforeServerStop(joinPoint);
-                aspect.logAfterServerStop(joinPoint);
-                
-                // RPC calls
-                aspect.logBeforeRpcCall(joinPoint);
-                aspect.logAfterSuccessfulRpcCall(joinPoint);
-                
-                // Errors
-                for (Exception ex : exceptions) {
-                    aspect.logRpcCallError(joinPoint, ex);
-                    aspect.logServerStartError(joinPoint, ex);
-                }
-            }
-        }
-
-        // Then
-        assertThat(listAppender.list).hasSizeGreaterThan(100);
+        assertThat(log.getLevel()).isEqualTo(Level.ERROR);
+        assertThat(log.getFormattedMessage()).contains("GRPC-RPC", "Error in", "generateTemporaryToken");
+        assertThat(log.getThrowableProxy()).isNotNull();
     }
 
     // ========================================================================
-    // Tests - Méthodes privées utilitaires
+    // Tests - Méthodes privées utilitaires (via Réflexion)
     // ========================================================================
 
-    @Test
-    @DisplayName("Doit sanitizer un email valide")
-    void shouldSanitizeValidEmail() throws Exception {
+    @DisplayName("Doit sanitizer les emails")
+    @ParameterizedTest(name = "Input: \"{0}\" -> Output: \"{1}\"")
+    @CsvSource({
+            "john.doe@example.com,   jo***e@example.com",
+            "test@example.com,     te***t@example.com",
+            "abc@test.com,         ***@test.com",
+            "ab@test.com,          ***@test.com",
+            "a@b.com,              ***@b.com"
+    })
+    void shouldSanitizeValidEmails(String input, String expected) throws Exception {
         // Given
         Method sanitizeEmailMethod = GrpcServerLoggingAspect.class.getDeclaredMethod("sanitizeEmail", String.class);
         sanitizeEmailMethod.setAccessible(true);
 
-        // When / Then - Test avec différents emails
-        String[] testCases = {
-            "john.doe@example.com",
-            "test@test.com",
-            "a@b.com",
-            "verylongemail@domain.com",
-            "short@x.co"
-        };
+        // When
+        String result = (String) sanitizeEmailMethod.invoke(aspect, input);
 
-        for (String email : testCases) {
-            for (int i = 0; i < 20; i++) {
-                String result = (String) sanitizeEmailMethod.invoke(aspect, email);
-                assertThat(result)
-                    .contains("@")
-                    .isNotEqualTo(email);
-            }
-        }
+        // Then
+        assertThat(result).isEqualTo(expected);
+    }
+
+    @DisplayName("Doit retourner '***' pour les emails invalides ou null")
+    @ParameterizedTest
+    @ValueSource(strings = {"invalidemail", ""})
+    void shouldSanitizeInvalidOrNullEmails(String input) throws Exception {
+        // Given
+        Method sanitizeEmailMethod = GrpcServerLoggingAspect.class.getDeclaredMethod("sanitizeEmail", String.class);
+        sanitizeEmailMethod.setAccessible(true);
+
+        // When
+        String result = (String) sanitizeEmailMethod.invoke(aspect, input);
+
+        // Then
+        assertThat(result).isEqualTo("***");
     }
 
     @Test
@@ -454,86 +311,44 @@ class GrpcServerLoggingAspectTest {
         sanitizeEmailMethod.setAccessible(true);
 
         // When
-        for (int i = 0; i < 50; i++) {
-            String result = (String) sanitizeEmailMethod.invoke(aspect, (String) null);
+        String result = (String) sanitizeEmailMethod.invoke(aspect, (String) null);
 
-            // Then
-            assertThat(result).isEqualTo("***");
-        }
+        // Then
+        assertThat(result).isEqualTo("***");
     }
 
-    @Test
-    @DisplayName("Doit sanitizer un email sans @")
-    void shouldSanitizeEmailWithoutAtSign() throws Exception {
-        // Given
-        Method sanitizeEmailMethod = GrpcServerLoggingAspect.class.getDeclaredMethod("sanitizeEmail", String.class);
-        sanitizeEmailMethod.setAccessible(true);
 
-        // When
-        for (int i = 0; i < 50; i++) {
-            String result = (String) sanitizeEmailMethod.invoke(aspect, "invalidemail");
-
-            // Then
-            assertThat(result).isEqualTo("***");
-        }
-    }
-
-    @Test
-    @DisplayName("Doit sanitizer un email court (<=3 caractères avant @)")
-    void shouldSanitizeShortEmail() throws Exception {
-        // Given
-        Method sanitizeEmailMethod = GrpcServerLoggingAspect.class.getDeclaredMethod("sanitizeEmail", String.class);
-        sanitizeEmailMethod.setAccessible(true);
-
-        // When
-        String[] shortEmails = {"ab@test.com", "a@test.com", "abc@test.com"};
-        
-        for (String email : shortEmails) {
-            for (int i = 0; i < 20; i++) {
-                String result = (String) sanitizeEmailMethod.invoke(aspect, email);
-
-                // Then
-                assertThat(result).isEqualTo("***@test.com");
-            }
-        }
-    }
-
-    @Test
-    @DisplayName("Doit sanitizer un email long (>3 caractères avant @)")
-    void shouldSanitizeLongEmail() throws Exception {
-        // Given
-        Method sanitizeEmailMethod = GrpcServerLoggingAspect.class.getDeclaredMethod("sanitizeEmail", String.class);
-        sanitizeEmailMethod.setAccessible(true);
-
-        // When
-        for (int i = 0; i < 50; i++) {
-            String result = (String) sanitizeEmailMethod.invoke(aspect, "johndoe@example.com");
-
-            // Then
-            assertThat(result)
-                .startsWith("jo***")
-                .endsWith("e@example.com");
-        }
-    }
-
-    @Test
-    @DisplayName("Doit sanitizer un token valide")
-    void shouldSanitizeValidToken() throws Exception {
+    @DisplayName("Doit sanitizer les tokens")
+    @ParameterizedTest(name = "Input: \"{0}\" -> Output: \"{1}\"")
+    @CsvSource({
+            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIn0,   eyJhbG...***"
+            // Ajoutez d'autres exemples de tokens longs si nécessaire
+    })
+    void shouldSanitizeValidTokens(String input, String expected) throws Exception {
         // Given
         Method sanitizeTokenMethod = GrpcServerLoggingAspect.class.getDeclaredMethod("sanitizeToken", String.class);
         sanitizeTokenMethod.setAccessible(true);
 
         // When
-        String longToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIn0";
-        
-        for (int i = 0; i < 50; i++) {
-            String result = (String) sanitizeTokenMethod.invoke(aspect, longToken);
+        String result = (String) sanitizeTokenMethod.invoke(aspect, input);
 
-            // Then
-            assertThat(result)
-                .startsWith("eyJhbG")
-                .endsWith("...***");
-        }
+        // Then
+        assertThat(result).isEqualTo(expected);
+    }
+
+    @DisplayName("Doit retourner '***' pour les tokens courts ou null")
+    @ParameterizedTest
+    @ValueSource(strings = {"abc", "1234567", "short", ""})
+    void shouldSanitizeShortOrNullTokens(String input) throws Exception {
+        // Given
+        Method sanitizeTokenMethod = GrpcServerLoggingAspect.class.getDeclaredMethod("sanitizeToken", String.class);
+        sanitizeTokenMethod.setAccessible(true);
+
+        // When
+        String result = (String) sanitizeTokenMethod.invoke(aspect, input);
+
+        // Then
+        assertThat(result).isEqualTo("***");
     }
 
     @Test
@@ -544,65 +359,43 @@ class GrpcServerLoggingAspectTest {
         sanitizeTokenMethod.setAccessible(true);
 
         // When
-        for (int i = 0; i < 50; i++) {
-            String result = (String) sanitizeTokenMethod.invoke(aspect, (String) null);
+        String result = (String) sanitizeTokenMethod.invoke(aspect, (String) null);
 
-            // Then
-            assertThat(result).isEqualTo("***");
-        }
+        // Then
+        assertThat(result).isEqualTo("***");
+    }
+
+    // ========================================================================
+    // Tests - Pointcuts Coverage
+    // ========================================================================
+
+    @Test
+    @DisplayName("Doit couvrir le pointcut grpcServerStart")
+    void shouldCoverGrpcServerStartPointcut() {
+        // Given / When
+        aspect.grpcServerStart();
+
+        // Then - Pas d'assertion nécessaire, juste couvrir le code du pointcut
+        assertThat(true).isTrue();
     }
 
     @Test
-    @DisplayName("Doit sanitizer un token court (<10 caractères)")
-    void shouldSanitizeShortToken() throws Exception {
-        // Given
-        Method sanitizeTokenMethod = GrpcServerLoggingAspect.class.getDeclaredMethod("sanitizeToken", String.class);
-        sanitizeTokenMethod.setAccessible(true);
+    @DisplayName("Doit couvrir le pointcut grpcServerStop")
+    void shouldCoverGrpcServerStopPointcut() {
+        // Given / When
+        aspect.grpcServerStop();
 
-        // When
-        String[] shortTokens = {"abc", "1234567", "short", ""};
-        
-        for (String token : shortTokens) {
-            for (int i = 0; i < 20; i++) {
-                String result = (String) sanitizeTokenMethod.invoke(aspect, token);
-
-                // Then
-                assertThat(result).isEqualTo("***");
-            }
-        }
+        // Then - Pas d'assertion nécessaire, juste couvrir le code du pointcut
+        assertThat(true).isTrue();
     }
 
     @Test
-    @DisplayName("Doit couvrir massivement toutes les branches de sanitizeEmail et sanitizeToken")
-    void shouldCoverAllSanitizationBranches() throws Exception {
-        // Given
-        Method sanitizeEmailMethod = GrpcServerLoggingAspect.class.getDeclaredMethod("sanitizeEmail", String.class);
-        sanitizeEmailMethod.setAccessible(true);
-        Method sanitizeTokenMethod = GrpcServerLoggingAspect.class.getDeclaredMethod("sanitizeToken", String.class);
-        sanitizeTokenMethod.setAccessible(true);
+    @DisplayName("Doit couvrir le pointcut grpcServiceCalls")
+    void shouldCoverGrpcServiceCallsPointcut() {
+        // Given / When
+        aspect.grpcServiceCalls();
 
-        // When - Appeler massivement avec différents cas
-        String[] emails = {
-            null, "", "no-at", "a@b.com", "ab@test.com", "abc@test.com", "test@example.com",
-            "verylongemailaddress@domain.com", "short@x.y", "user123@test.org"
-        };
-        
-        String[] tokens = {
-            null, "", "abc", "short", "1234567890", "averylongtoken123456789",
-            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.payload.signature"
-        };
-
-        for (int iteration = 0; iteration < 100; iteration++) {
-            for (String email : emails) {
-                sanitizeEmailMethod.invoke(aspect, email);
-            }
-            
-            for (String token : tokens) {
-                sanitizeTokenMethod.invoke(aspect, token);
-            }
-        }
-
-        // Then - Pas d'assertion spécifique, juste couvrir le code
+        // Then - Pas d'assertion nécessaire, juste couvrir le code du pointcut
         assertThat(true).isTrue();
     }
 }
